# compiler-constructions

./: CMakeLists.txt  civicc.tar
build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  civicc  cmake_install.cmake  lexer.c  lexer.h  parser.c  parser.h
build-debug/ccngen/: action_handling.c  ast.c  ast.dot  ccn_check.c  ccn_copy.c  ccn_free.c  trav.c  trav_data.c  vtables.c
build-debug/ccngen/ccngen/: action_handling.h  actions.h  ast.h  enum.h  trav.h  trav_data.h
build-debug/ccngen/user/: trav_arithmeticoccurrences.c  trav_eval.c  trav_identifieroccurrences.c  trav_optsubstraction.c  trav_print.c  trav_reduct.c  trav_renameidentifiers.c  trav_strenghtreduction.c  trav_strengthreduction.c  trav_sumints.c
build-debug/palm/: CTestTestfile.cmake  Makefile  cmake_install.cmake  palm_tests
build-debug/palm/include/palm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/palm/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
civic_progs/: array.cvc  core.cvc  coreio.cvc  euclid.cvc  mainArray.cvc
civicc/civic_progs/: mainCore.cvc  mainCoreio.cvc
civicc/src/: main.ccn
civicc/src/framework_assignments/: arithmetic_occurrences.c  identifier_occurrences.c  strength_reduction.c
civicc/src/print/: print.c
civicc/src/scanparse/: parser.y
civicc/test/: test1.cvc
coconut/cocogen/: CMakeLists.txt
src/: user_types.h
src/demo/: opt_sub.c  rename_identifiers.c  sum_ints.c
src/framework_assignments/: arithmetic_occurrences.c  identifier_occurrences.c  strength_reduction.c
src/print/: print.c
src/scanparse/: lexer.l  parser.y
